manque la couleur sur la photo et probleme proportion

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             and make better decisions regarding revenue,
             customer experience, and overall efficency.
         </p>
-
+        
         <div class="parent">
             <h2>10k+</h2>
             <h2>314</h2>
@@ -27,9 +27,9 @@
         </div>
 
         <div class="description2">
-            <p class="description">COMPANIES</p>
-            <p class="description">TEMPLATES</p>
-            <p class="description">QUERIES</p>
+            <p class="descriptioncom">COMPANIES</p>
+            <p class="descriptiontemp">TEMPLATES</p>
+            <p class="descriptionque">QUERIES</p>
         </div>
     </div>
         
