travail fini sur site-ordi

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         </div>
             
         <div class="parentimage">
+            <div class="filtreViolet"></div>
             <img src="image-header-mobile.jpg" alt="photo">
+            
         </div>
     </div>
 </body>
